updated CI job name references

--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -50,7 +50,7 @@ groups:
 {% set gp_ver = None %}
   - Compatibility Gate for PXF-GP
   - Promote PXF-GP5 and PXF-GP6 Artifacts
-  - Publish PXF-GP5 and PXF-GP6 Artifacts to GP-RelEng
+  - Publish_PXF-GP5_and_PXF-GP6_Artifacts_to_GP-RelEng
 
 {% set gp_ver = 5 %}
 - name: GP[[gp_ver]] on RHEL6
@@ -109,7 +109,7 @@ groups:
 - name: Promote and Publish
   jobs:
   - Promote PXF-GP5 and PXF-GP6 Artifacts
-  - Publish PXF-GP5 and PXF-GP6 Artifacts to GP-RelEng
+  - Publish_PXF-GP5_and_PXF-GP6_Artifacts_to_GP-RelEng
 
 ## ======================================================================
 ## ANCHORS
