Templatize bucket locations in pxf-build pipeline
This commit also removes separate CCP vars files from set-pipeline
commands and unused variable from set-pipeline for build and dev-build

Co-authored-by: Ashuka Xue <axue@vmware.com>
Co-authored-by: Bradford D. Boyle <bradfordb@vmware.com>

--- a/concourse/Makefile
+++ b/concourse/Makefile
@@ -17,7 +17,7 @@ NUM_GPDB6_VERSIONS          ?=  9
 FLY_CMD                      = /usr/local/bin/fly
 TEMPLATE_CMD                 = ./template_tool
 FLY_OPTION_NON-INTERACTIVE   =
-SECRETS_FILE                 = $(HOME)/workspace/gp-continuous-integration/secrets/pxf-secrets.yml
+SECRETS_HOME                 = $(HOME)/workspace/gp-continuous-integration/secrets
 SLACK                       ?= true
 # below are dev-build specific vars
 MULTINODE                   ?= false
@@ -55,14 +55,12 @@ set-build-pipeline:
 		--check-creds \
 		--pipeline=$(BUILD_PIPELINE_NAME) \
 		--config "$${PIPELINE_FILE}" \
-		--load-vars-from=$(SECRETS_FILE) \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/gpdb_common-ci-secrets.yml \
 		--load-vars-from=$(HOME)/workspace/pxf/concourse/settings/pxf-multinode-params.yml \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/ccp_ci_secrets_ud.yml \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/ccp_ci_secrets_ud_kerberos.yml \
+		--load-vars-from=$(SECRETS_HOME)/gpdb_common-ci-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-common.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-prod.yml \
 		--var=pxf-git-branch=${BRANCH} \
-		--var=folder-prefix=prod/gpdb_branch \
-		--var=releng-release-bucket=pivotal-gpdb-concourse-resources-prod \
 		${FLY_OPTION_NON-INTERACTIVE} || echo "Generated yaml has errors: check $${PIPELINE_FILE}"
 
 	@echo using the following command to unpause the pipeline:
@@ -97,13 +95,12 @@ set-dev-build-pipeline:
 		--check-creds \
 		--pipeline=$(DEV_BUILD_PIPELINE_NAME) \
 		--config "$${PIPELINE_FILE}" \
-		--load-vars-from=$(SECRETS_FILE) \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/gpdb_common-ci-secrets.yml \
 		--load-vars-from=$(HOME)/workspace/pxf/concourse/settings/pxf-multinode-params.yml \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/ccp_ci_secrets_ud.yml \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/ccp_ci_secrets_ud_kerberos.yml \
+		--load-vars-from=$(SECRETS_HOME)/gpdb_common-ci-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-common.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-dev.yml \
 		--var=pxf-git-branch=${BRANCH} \
-		--var=folder-prefix=prod/gpdb_branch \
 		--var=slack-integration-webhook-url=$${SLACK_INTEGRATION_WEBHOOK_URL} \
 		${FLY_OPTION_NON-INTERACTIVE} || echo "Generated yaml has errors: check $${PIPELINE_FILE}"
 
@@ -124,7 +121,9 @@ set-pr-build-pipeline:
 		--check-creds \
 		--pipeline=$(PR_BUILD_PIPELINE_NAME) \
 		--config "$${PIPELINE_FILE}" \
-		--load-vars-from=$(SECRETS_FILE) \
+		--load-vars-from=$(SECRETS_HOME)/pxf-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-common.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-prod.yml \
 		${FLY_OPTION_NON-INTERACTIVE} || echo "Generated yaml has errors: check $${PIPELINE_FILE}"
 
 	@echo using the following command to unpause the pipeline:
@@ -140,8 +139,10 @@ set-certification-pipeline:
 		--check-creds \
 		--pipeline=$(CERTIFICATION_PIPELINE_NAME) \
 		--config pipelines/certification_pipeline.yml \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/gpdb_common-ci-secrets.yml \
-		--load-vars-from=$(SECRETS_FILE) \
+		--load-vars-from=$(SECRETS_HOME)/gpdb_common-ci-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-common.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-prod.yml \
 		--var=pxf-git-branch=${BRANCH} \
 		${FLY_OPTION_NON-INTERACTIVE} || echo "pipelines/certification_pipeline.yml has errors"
 
@@ -163,8 +164,10 @@ set-pivnet-pipeline:
 		set-pipeline \
 		--check-creds \
 		--config "$${PIPELINE_FILE}" \
-		--load-vars-from=$(SECRETS_FILE) \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/gpdb_common-ci-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/gpdb_common-ci-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-common.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-prod.yml \
 		--var pxf-git-branch=$(BRANCH) \
 		--var pxf-git-remote=https://github.com/greenplum-db/pxf \
 		--pipeline pivnet_artifacts \
@@ -183,10 +186,11 @@ perf:
 		set-pipeline \
 		--check-creds \
 		--config $(HOME)/workspace/pxf/concourse/pipelines/perf_pipeline.yml \
-		--load-vars-from=$(SECRETS_FILE) \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/gpdb_common-ci-secrets.yml \
-		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/ccp_ci_secrets_ud.yml \
 		--load-vars-from=$(HOME)/workspace/pxf/concourse/settings/perf-settings-$(SCALE)g.yml \
+		--load-vars-from=$(SECRETS_HOME)/gpdb_common-ci-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-secrets.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-common.yml \
+		--load-vars-from=$(SECRETS_HOME)/pxf-prod.yml \
 		--var pxf-git-branch=$(BRANCH) \
 		--pipeline $(PERF_PIPELINE_NAME) \
 		${FLY_OPTION_NON-INTERACTIVE}
