--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -1543,7 +1543,7 @@ jobs:
     params:
       GCS_RELEASES_BUCKET: data-gpdb-ud-pxf-releases
       GCS_RELEASES_PATH: ((pxf-releases-bucket-prefix))/releases
-      GIT_BRANCH: [[git_branch]]
+      GIT_BRANCH: ((pxf-git-branch))
       GIT_EMAIL: ((pxf-git-deploy-email))
       GIT_REMOTE_URL: ((pxf-git-remote-ssh-url))
       GIT_SSH_KEY: ((pxf-git-deploy-key))
