Docker: Upgrade pip in Centos 7 - GPDB 6 Dockerfile
The Dockerfile is no longer building because of an old version of pip.
We now upgrade pip before installing psi and paramiko

--- a/concourse/docker/pxf-dev-base/gpdb6/centos7/Dockerfile
+++ b/concourse/docker/pxf-dev-base/gpdb6/centos7/Dockerfile
@@ -35,7 +35,8 @@ RUN curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERS
     && rm -f /tmp/apache-maven.tar.gz \
     && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn \
     && yum install -y rpm-build python-devel sudo && yum clean all \
-    && cd /tmp && /usr/bin/pip install psi paramiko --no-cache-dir
+    && cd /tmp && /usr/bin/pip install --upgrade pip \
+    && /usr/bin/pip install psi paramiko --no-cache-dir
 
 # create user gpadmin since GPDB cannot run under root
 RUN ssh-keygen -t rsa -N "" -f /root/.ssh/id_rsa \
