--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -22,19 +22,14 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: PXF Version ${{ github.ref }}
           body: |
-            ## 5.15.0 (08/19/2020)
-
-            ### Enhancements:
-
-            - [#392](https://github.com/greenplum-db/pxf/pull/392) Add support for Avro BZip2 and XZ Compression Codecs
-            - [#395](https://github.com/greenplum-db/pxf/pull/395) Bump com.fasterxml.jackson.core:jackson-* version from 2.9.x to 2.11.0
-            - [#410](https://github.com/greenplum-db/pxf/pull/410) Allow skipping the header for *:text profiles
-            - [#421](https://github.com/greenplum-db/pxf/pull/421) Deprecate THREAD_SAFE custom option
+            ## 5.15.1 (09/10/2020)
 
             ### Bug Fixes:
 
-            - [#382](https://github.com/greenplum-db/pxf/pull/382) Add missing dependency for Hive profile when accessing CSV files
-            - [#415](https://github.com/greenplum-db/pxf/pull/415) Hive: Report the correct error message from HiveMetaStoreClientCompatibility1xx
-            - [#416](https://github.com/greenplum-db/pxf/pull/416) Fix performance issues when writing wide CSV/TEXT rows
+            - [#418](https://github.com/greenplum-db/pxf/pull/418) Parquet performance improvements for write
+            - [#433](https://github.com/greenplum-db/pxf/pull/433) Parquet Write: Fix physical and logical storage for DATE types
+            - [#435](https://github.com/greenplum-db/pxf/pull/435) Upgrade from Tomcat 7.0.100 to 7.0.105
+            - [#439](https://github.com/greenplum-db/pxf/pull/439) Add lib/native directory in PXF_CONF
+
           draft: false
           prerelease: false
