--- a/concourse/pipelines/certification_pipeline.yml
+++ b/concourse/pipelines/certification_pipeline.yml
@@ -88,14 +88,14 @@ resources:
     username: _json_key
     password: {{pxf-cloudbuild-service-account-key}}
 
-#- name: gpdb[[gp_ver]]-pxf-dev-ubuntu18-image
-#  type: registry-image
-#  icon: docker
-#  source:
-#    repository: gcr.io/data-gpdb-ud/gpdb-pxf-dev/gpdb[[gp_ver]]-ubuntu18.04-test-pxf
-#    tag: latest
-#    username: _json_key
-#    password: {{pxf-cloudbuild-service-account-key}}
+- name: gpdb6-pxf-dev-ubuntu18-image
+  type: registry-image
+  icon: docker
+  source:
+    repository: gcr.io/data-gpdb-ud/gpdb-pxf-dev/gpdb6-ubuntu18.04-test-pxf
+    tag: latest
+    username: _json_key
+    password: {{pxf-cloudbuild-service-account-key}}
 
 - name: ccp-7-image
   type: registry-image
@@ -133,13 +133,13 @@ resources:
     json_key: {{concourse-gcs-resources-service-account-key}}
     regexp: server/published/gpdb6/server-rc-(.*)-rhel7_x86_64.tar.gz
 
-#- name: gpdb[[gp_ver]]_ubuntu18_tarball
-#  type: gcs
-#  icon: google-drive
-#  source:
-#    bucket: pivotal-gpdb-concourse-resources-prod
-#    json_key: ((data-gpdb-ud-google-json-key))
-#    regexp: server/published/gpdb6/server-rc-(.*)-ubuntu18.04_x86_64.tar.gz
+- name: gpdb6_ubuntu18_tarball
+  type: gcs
+  icon: google-drive
+  source:
+    bucket: pivotal-gpdb-concourse-resources-prod
+    json_key: ((data-gpdb-ud-google-json-key))
+    regexp: server/published/gpdb6/server-rc-(.*)-ubuntu18.04_x86_64.tar.gz
 
 ## ---------- PXF Released RPM Artifacts ----------
 - name: pxf_gp5_rpm_rhel6
@@ -166,13 +166,13 @@ resources:
     json_key: {{pxf-storage-service-account-key}}
     regexp: prod/releases/gp6/pxf-gp6-(.*)-1.el7.x86_64.rpm
 
-#- name: pxf_gp[[gp_ver]]_deb_ubuntu18
-#  type: gcs
-#  icon: google-drive
-#  source:
-#    bucket: data-gpdb-ud-pxf-build
-#    json_key: ((pxf-storage-service-account-key))
-#    regexp: prod/releases/gp[[gp_ver]]/pxf-gp[[gp_ver]]-(.*)-1.ubuntu18.04.x86_64.deb
+- name: pxf_gp6_deb_ubuntu18
+  type: gcs
+  icon: google-drive
+  source:
+    bucket: data-gpdb-ud-pxf-build
+    json_key: ((pxf-storage-service-account-key))
+    regexp: prod/releases/gp6/pxf-gp6-(.*)-1-ubuntu18.04-amd64.deb
 
 - name: slack-alert
   type: slack-notification
@@ -287,6 +287,38 @@ jobs:
       PXF_CERTIFICATION_FOLDER: data-gpdb-ud-pxf-build/prod/certifications
 
 ## ---------- Ubuntu 18 Swimlane ----------
+- name: Certify GPDB-6 with PXF-GP6 on Ubuntu 18.04
+  plan:
+  - in_parallel:
+    - get: pxf_src
+    - get: bin_gpdb
+      resource: gpdb6_ubuntu18_tarball
+      trigger: true
+    - get: pxf_package
+      resource: pxf_gp6_deb_ubuntu18
+      trigger: true
+    - get: gpdb6-pxf-dev-ubuntu18-image
+    - get: ccp-7-image
+    - get: pxf-automation-dependencies
+    - get: singlecluster
+      resource: singlecluster-hdp2
+  - task: Test GPDB-6 with PXF-GP6-HDP2 on Ubuntu 18.04
+    file: pxf_src/concourse/tasks/test_certification.yml
+    image: gpdb6-pxf-dev-ubuntu18-image
+    params:
+      ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      GP_VER: 6
+      GROUP: gpdb,proxy,profile
+      SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+      TARGET_OS: ubuntu
+      TARGET_OS_VERSION: 18.04
+  - task: Upload certification for GPDB-6 with PXF-GP6-HDP2 on Ubuntu 18.04
+    file: pxf_src/concourse/tasks/certification_upload.yml
+    image: ccp-7-image
+    params:
+      GOOGLE_CREDENTIALS: {{pxf-storage-service-account-key}}
+      GP_VER: 6
+      PXF_CERTIFICATION_FOLDER: data-gpdb-ud-pxf-build/prod/certifications
 
 ## ---------- Reporting Gates ----------
 - name: Reporting Gate for PXF-GP5
@@ -333,6 +365,9 @@ jobs:
       passed:
       - Certify GPDB-6 with PXF-GP6 on RHEL7
       trigger: true
+    - get: pxf_gp6_deb_ubuntu18
+      passed:
+      - Certify GPDB-6 with PXF-GP6 on Ubuntu 18.04
     - get: ccp-7-image
   - task: Print Report for GPDB-6 with PXF-GP6 Artifacts
     <<: *slack_alert
