Add support for File Storage (Attached to every segment host)  (#456)
The FILE profile allows PXF reading data from Network File Systems. The
filesystem has to be mounted on every segment host where PXF is running from.
PXF will then read/write data from the mounted NFS file.

For NFS, the `pxf.fs.basePath` property must be set to a valid path. The
`pxf.fs.basePath` property represents the base path to be used for
tables accessing that server.

For example, if the `pxf.fs.basePath` property is set to `/mount/path`
and the external table definition is the following:

```sql
CREATE EXTERNAL TABLE nfs_table()
LOCATION ('pxf://path/to/data?PROFILE=nfs:avro&SERVER=nfs-server')
FORMAT 'CUSTOM' (formatter='pxfwritable_import');

Then PXF will use the :///mount/path/path/to/data URI to read AVRO
files.

In this commit, PXF also prevents relative paths to be specified in the
location of any of the hadoop-compatible file systems (S3, GS, HDFS,
NFS, etc). This is to prevent users from accessing data under relative
paths to the `basePath`. For example, assume the mount path above, a
malicious user can attempt to read data from `/etc/passwd` by creating
an external table like this:

```sql
CREATE EXTERNAL TABLE hack_etc_passwd (entry text)
LOCATION ('pxf://../../etc/passwd?PROFILE=nfs:text&SERVER=nfs')
FORMAT 'text';
```

PXF now prevents users from accessing relative paths in the path defined
in the LOCATION URI. PXF also prevents using `$` to disallow resolution
of environment variables for example:

```sql
CREATE EXTERNAL TABLE hack_home_dir (entry text)
LOCATION
('pxf://$HOME/secret-files-in-gpadmin-home?PROFILE=nfs:text&SERVER=nfs')
FORMAT 'text';
```

PXF now will throw an exception in cases where users attempt to use
relative paths or $ in the path.

LOCALFILE is deprecated in favor of FILE

--- a/automation/Makefile
+++ b/automation/Makefile
@@ -9,6 +9,7 @@ SHELL := bash
 UNAME_S := $(shell uname -s)
 MAVEN_TEST_OPTS+= -B -e
 PXF_TMP_LIB := $(HOME)/automation_tmp_lib
+BASE_PATH   ?= /mnt/nfs/var/nfsshare
 
 ifneq "$(TEST)" ""
 	MAVEN_TEST_OPTS+= -Dtest=$(TEST)
@@ -157,6 +158,16 @@ ifneq "$(PROTOCOL)" ""
 	@if [ ! -f "$(PROTOCOL_HOME)/$(PROTOCOL)-site.xml" ]; then \
 		cp $(PXF_HOME)/templates/user/templates/$(PROTOCOL)-site.xml $(PROTOCOL_HOME)/; \
 		cp $(PXF_HOME)/templates/user/templates/mapred-site.xml $(PROTOCOL_HOME)/; \
+		if [ $(PROTOCOL) = file ]; then \
+			if [ ! -d "$(BASE_PATH)" ]; then \
+				echo "The NFS directory '$(BASE_PATH)' does not exist. Please configure it and try again"; \
+				rm -rf $(PROTOCOL_HOME); \
+				exit 1; \
+			fi; \
+			echo "Make sure your $PXF_CONF/conf/pxf-profiles.xml file configures the file:AvroSequenceFile and file:SequenceFile profiles"; \
+			cp $(PXF_HOME)/templates/user/templates/pxf-site.xml $(PROTOCOL_HOME)/; \
+			sed $(SED_OPTS) 's|</configuration>|<property><name>pxf.fs.basePath</name><value>$(BASE_PATH)</value></property></configuration>|g' $(PROTOCOL_HOME)/pxf-site.xml; \
+		fi; \
 		if [ $(PROTOCOL) = s3 ]; then \
 			if [ "$(MINIO)" = "true" ]; then \
 				cp $(PXF_HOME)/templates/user/templates/minio-site.xml $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
