--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -36,6 +36,7 @@ groups:
   - Test PXF-GP[[gp_ver]]-HDP3-SECURE AMBARI (MANUAL) on RHEL7
   - Test PXF-GP[[gp_ver]]-HDP2-JDK11 on RHEL7
   - Test PXF-GP[[gp_ver]]-CDH on RHEL7
+  - Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
   - Test PXF-GP[[gp_ver]]-S3 on RHEL7
   - Test PXF-GP[[gp_ver]]-S3-NO-IMPERS on RHEL7
   - Test PXF-GP[[gp_ver]]-ADL-NO-IMPERS on RHEL7
@@ -79,6 +80,7 @@ groups:
   - Test PXF-GP[[gp_ver]]-HDP3-SECURE AMBARI (MANUAL) on RHEL7
   - Test PXF-GP[[gp_ver]]-HDP2-JDK11 on RHEL7
   - Test PXF-GP[[gp_ver]]-CDH on RHEL7
+  - Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
   - Test PXF-GP[[gp_ver]]-S3 on RHEL7
   - Test PXF-GP[[gp_ver]]-S3-NO-IMPERS on RHEL7
   - Test PXF-GP[[gp_ver]]-ADL-NO-IMPERS on RHEL7
@@ -916,6 +918,36 @@ jobs:
       TARGET_OS: centos
       TARGET_OS_VERSION: 7
 
+## ---------- FILE tests -----------------
+
+- name: Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
+  plan:
+  - in_parallel:
+    - get: pxf_src
+      passed: [Testing Gate for PXF-GP]
+      trigger: true
+    - get: pxf_tarball
+      resource: pxf_gp[[gp_ver]]_tarball_rhel7
+      passed: [Testing Gate for PXF-GP]
+    - get: gpdb_package
+      resource: gpdb[[gp_ver]]_rhel7_rpm_latest-0
+      passed: [Testing Gate for PXF-GP]
+    - get: gpdb[[gp_ver]]-pxf-dev-centos7-image
+    - get: pxf-automation-dependencies
+    - get: singlecluster
+      resource: singlecluster-hdp2
+  - task: Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
+    file: pxf_src/concourse/tasks/test.yml
+    image: gpdb[[gp_ver]]-pxf-dev-centos7-image
+    params:
+      BASE_PATH: /nfs/general
+      GP_VER: [[gp_ver]]
+      GROUP: hcfs
+      IMPERSONATION: false
+      PROTOCOL: file
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 7
+
 ## ---------- HCFS Cloud tests ----------
 
 - name: Test PXF-GP[[gp_ver]]-S3 on RHEL7
@@ -1311,6 +1343,7 @@ jobs:
       - Test PXF-GP[[gp_ver]]-HDP3 on RHEL7
       - Test PXF-GP[[gp_ver]]-HDP2-JDK11 on RHEL7
       - Test PXF-GP[[gp_ver]]-CDH on RHEL7
+      - Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
       - Test PXF-GP[[gp_ver]]-S3 on RHEL7
       - Test PXF-GP[[gp_ver]]-S3-NO-IMPERS on RHEL7
       - Test PXF-GP[[gp_ver]]-ADL-NO-IMPERS on RHEL7
@@ -1337,6 +1370,7 @@ jobs:
       - Test PXF-GP[[gp_ver]]-HDP3 on RHEL7
       - Test PXF-GP[[gp_ver]]-HDP2-JDK11 on RHEL7
       - Test PXF-GP[[gp_ver]]-CDH on RHEL7
+      - Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
       - Test PXF-GP[[gp_ver]]-S3 on RHEL7
       - Test PXF-GP[[gp_ver]]-S3-NO-IMPERS on RHEL7
       - Test PXF-GP[[gp_ver]]-ADL-NO-IMPERS on RHEL7
