--- a/concourse/tasks/test_pxf_on_ccp.yml
+++ b/concourse/tasks/test_pxf_on_ccp.yml
@@ -18,11 +18,13 @@ inputs:
 params:
   ACCEPTANCE:
   ACCESS_KEY_ID:
+  BASE_PATH:
   GP_VER:
   GROUP: feature
   HIVE_VERSION: 1
   IMPERSONATION: true
   KERBEROS: false
+  PROTOCOL:
   PXF_COMPONENT: true
   PXF_JVM_OPTS:
   SECRET_ACCESS_KEY:
