--- a/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
@@ -62,7 +62,7 @@ anchors:
 ## ======================================================================
 resource_types:
 
-{% if multinode or multinode_no_impersonation %}
+{% if multinode or multinode_no_impersonation or file %}
 - name: terraform
   type: registry-image
   source:
@@ -140,7 +140,7 @@ resources:
     branch: ((pxf-git-branch))
     uri: ((pxf-git-remote))
 
-{% if multinode or multinode_no_impersonation %}
+{% if multinode or multinode_no_impersonation or file %}
 - name: ccp_src
   type: git
   source:
@@ -205,7 +205,7 @@ resources:
 {% endif %}
 {% set gp_ver = None %}
 
-{% if multinode or multinode_no_impersonation or ambari %}
+{% if multinode or multinode_no_impersonation or ambari or file %}
 - name: ccp-7-image
   type: registry-image
   icon: docker
@@ -290,7 +290,7 @@ resources:
 {% set gp_ver = None %}
 
 ## ---------- Auxiliary Resources ----------
-{% if multinode or multinode_no_impersonation %}
+{% if multinode or multinode_no_impersonation or file %}
 - name: terraform
   type: terraform
   source:
@@ -708,6 +708,103 @@ jobs:
 {% endif %}
 {% endif %}
 
+## ---------- FILE tests -----------------
+
+{% if file %}
+- name: Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
+  max_in_flight: 2
+  plan:
+  - in_parallel:
+    - get: pxf_src
+      passed: [Build PXF-GP[[gp_ver]] on RHEL7]
+      trigger: true
+    - get: pxf_tarball
+      resource: pxf_gp[[gp_ver]]_tarball_rhel7
+      passed: [Build PXF-GP[[gp_ver]] on RHEL7]
+    - get: gpdb_package
+      resource: gpdb[[gp_ver]]_rhel7_rpm_latest-0
+      passed: [Build PXF-GP[[gp_ver]] on RHEL7]
+    - get: gpdb[[gp_ver]]-pxf-dev-centos7-image
+    - get: ccp_src
+    - get: ccp-7-image
+    - get: pxf-automation-dependencies
+    - get: singlecluster
+      resource: singlecluster-hdp2
+  - put: terraform_gpdb
+    resource: terraform
+    params:
+      action: create
+      delete_on_failure: true
+      generate_random_name: true
+      terraform_source: ccp_src/google/
+      vars:
+        PLATFORM: centos7
+        number_of_nodes: ((number_of_gpdb_nodes))
+        segments_per_host: 4
+        instance_type: n1-standard-4
+        ccp_reap_minutes: 60
+  - task: Generate Greenplum Cluster
+    input_mapping:
+      gpdb_rpm: gpdb_package
+      terraform: terraform_gpdb
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    image: ccp-7-image
+    params:
+      AWS_ACCESS_KEY_ID: ((tf-machine-access-key-id))
+      AWS_SECRET_ACCESS_KEY: ((tf-machine-secret-access-key))
+      AWS_DEFAULT_REGION: ((aws-region))
+      BUCKET_PATH: ((tf-bucket-path))
+      BUCKET_NAME: ((tf-bucket-name))
+      PLATFORM: centos7
+      CLOUD_PROVIDER: google
+      GPDB_RPM: true
+  - task: Initialize Greenplum
+    file: ccp_src/ci/tasks/gpinitsystem.yml
+  - task: Setup NFS
+    input_mapping:
+      terraform: terraform_gpdb
+    file: pxf_src/concourse/tasks/install_nfs_on_ccp.yml
+    image: ccp-7-image
+    params:
+      BASE_PATH: /mnt/nfs/var/nfsshare
+  - task: Setup PXF
+    input_mapping:
+      terraform: terraform_gpdb
+    file: pxf_src/concourse/tasks/install_pxf_on_ccp.yml
+    image: ccp-7-image
+    params:
+      GP_VER: [[gp_ver]]
+      IMPERSONATION: true
+      INSTALL_GPHDFS: false
+      PXF_JVM_OPTS: ((pxf-jvm-opts))
+      SKIP_HADOOP_SETUP: true
+  - task: Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
+    on_success:
+      do:
+      - put: terraform_gpdb
+        resource: terraform
+        params:
+          action: destroy
+          env_name_file: terraform_gpdb/name
+          terraform_source: ccp_src/google/
+        get_params:
+          action: destroy
+    privileged: true
+    file: pxf_src/concourse/tasks/test_pxf_on_ccp.yml
+    image: gpdb[[gp_ver]]-pxf-dev-centos7-image
+    params:
+      BASE_PATH: /mnt/nfs/var/nfsshare
+      GP_VER: [[gp_ver]]
+      GROUP: hcfs
+      IMPERSONATION: false
+      PROTOCOL: file
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 7
+{% if slack_notification %}
+    <<: *slack_alert
+{% endif %}
+{% endif %}
+
 ## ---------- HCFS Cloud tests ----------
 
 {% if s3 %}
@@ -741,9 +838,7 @@ jobs:
 {% if slack_notification %}
     <<: *slack_alert
 {% endif %}
-{% endif %}
 
-{% if s3 %}
 - name: Test PXF-GP[[gp_ver]]-S3-NO-IMPERS on RHEL7
   plan:
   - in_parallel:
